--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <body>
   <div class="container" onclick="document.body.classList.add('show-message')">
     <div class="envelope">
-      <span>📩</span>
+      <span></span>
     </div>
     <div class="message">
       <h1>Feliz Dia da Mãe</h1>
