--- a/index.html
+++ b/index.html
@@ -1,12 +1,75 @@
 <!DOCTYPE html>
 <html lang="pt">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Austin Stickers </title>
-</head>
-<body>
-  <h2 style="font-family: Arial; text-align: center; margin-bottom: 20px">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>SkinPeek</title>
+    <style>
+      nav {
+        background: #1e1e2f;
+        color: white;
+        padding: 15px 25px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
+        position: sticky;
+        top: 0;
+        z-index: 1000;
+      }
+
+      nav h1 {
+        margin: 0;
+        font-size: 20px;
+        letter-spacing: 1px;
+      }
+
+      nav ul {
+        list-style: none;
+        display: flex;
+        gap: 20px;
+        margin: 0;
+        padding: 0;
+      }
+
+      nav ul li {
+        display: inline;
+      }
+
+      nav ul li a {
+        text-decoration: none;
+        color: white;
+        font-weight: 500;
+        transition: color 0.2s ease-in-out;
+      }
+
+      nav ul li a:hover {
+        color: #00d4ff;
+      }
+
+      .disclaimer {
+        margin: 40px auto 20px;
+        max-width: 600px;
+        padding: 15px 20px;
+        font-size: 0.9em;
+        color: #ccc;
+        background: #1e1e2f;
+        border-left: 4px solid #00d4ff;
+        border-radius: 6px;
+        font-family: Arial, sans-serif;
+        text-align: center;
+      }
+    </style>
+  </head>
+  <body>
+    <nav>
+      <h1>SkinPeek</h1>
+      <ul>
+        <li><a href="finder.html">Finder</a></li>
+        <li><a href="inventory.html">Inventory</a></li>
+      </ul>
+    </nav>
+    <h2 style="font-family: Arial; text-align: center; margin-bottom: 20px">
       Price Information - Stickers Austin 2025
     </h2>
 
@@ -38,6 +101,11 @@
       >
         0 €
       </p>
+    </div>
+
+    <div class="disclaimer">
+      ⚠️ Este projeto é apenas para uso pessoal.  
+      Os preços mostrados estão ligados exclusivamente à minha conta Steam e não têm qualquer valor oficial de mercado.
     </div>
 
     <script>
@@ -109,5 +177,5 @@
 
       items.forEach(fetchData);
     </script>
-</body>
+  </body>
 </html>
