--- a/index.html
+++ b/index.html
@@ -115,11 +115,7 @@
       const proxy = "https://corsproxy.io/?";
 
       const items = [
-        { name: "Sticker | TYLOO (Holo) | Austin 2025", qty: 1 },
-        { name: "Sticker | OG (Holo) | Austin 2025", qty: 2 },
-        { name: "Sticker | TYLOO (Foil) | Austin 2025", qty: 2 },
-        { name: "Sticker | NRG (Holo) | Austin 2025", qty: 2 },
-        { name: "Sticker | Chinggis Warriors (Foil) | Austin 2025", qty: 2 },
+        { name: "Sticker | Froggles (Holo)", qty: 1 },
       ];
 
       let totalPrice = 0;
