--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
       const items = [
         { name: "Sticker | Froggles (Holo)", qty: 1 },
-        { name: "FAMAS | Bad Trip", qty: 1 }
+        { name: "FAMAS | Bad Trip (Field-Tested)", qty: 1 }
       ];
 
       let totalPrice = 0;
