--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
       <ul>
         <li><a href="finder.html">Finder</a></li>
         <li><a href="inventory.html">Inventory</a></li>
+        <li><a href="perfis.html">Perfis</a></li>
       </ul>
     </nav>
     <h2 style="font-family: Arial; text-align: center; margin-bottom: 20px">
