--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <section class="hero" id="hero">
       <!-- Vídeo de fundo -->
       <video class="hero-video" autoplay muted loop playsinline>
-        <source src="media/video_hero.mp4" type="video/mp4" />
+        <source src="media/video_low.mp4" type="video/mp4" />
       </video>
 
       <!-- Overlay -->
